--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,7 +16,7 @@
 
       </div>
       <div class="dropdown show col-md-2">
-          <a class="dropdown-toggle"role="button" id="dropdownMenuLink" data-toggle="dropdown" style="color: white;">
+          <a class="dropdown-toggle"role="button" id="dropdownMenuLink" data-toggle="dropdown" style="color: black;">
             Olá, <b> Aluno (a)</b>
           </a>
           
