--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -16,7 +16,7 @@
                 </div>
                 <div id="profile-image">
                     <img id="profile-pic" [src]="fotoPerfil" alt="">
-                    <a href="#0" s
+                    <a href="#/perfil" s
                     ><i class="fas fa-cog fa-3x"></i></a>
                 </div>
                 <div id="user-info">
@@ -64,62 +64,21 @@
 
                                     <div class="carousel-item active">
                                         <div class="row">
-                                            <div class="col-md-3">
+                                            <div class="col">
                                                 <a href="#">
-                                                    <img class="portfolio-item" src="http://placehold.it/250x250" alt="Image"
+                                                    <img class="portfolio-item" [src]="imgTeste" alt="Image"
                                                         style="max-width:100%;">
+                                                        <h3 style="color: orange; margin-top: -20%"> Teste portfolio</h3>
                                                 </a>
                                             </div>
-                                            <div class="col-md-3">
+                                            <div class="col">
                                                 <a href="#">
-                                                    <img class="portfolio-item" src="http://placehold.it/250x250" alt="Image"
-                                                        style="max-width:100%;">
-                                                </a>
-                                            </div>
-                                            <div class="col-md-3">
-                                                <a href="#">
-                                                    <img class="portfolio-item" src="http://placehold.it/250x250" alt="Image"
-                                                        style="max-width:100%;">
-                                                </a>
-                                            </div>
-                                            <div class="col-md-3">
-                                                <a href="#">
-                                                    <img class="portfolio-item" src="http://placehold.it/250x250" alt="Image"
+                                                    <img class="portfolio-item" [src]="addImg" alt="Image"
                                                         style="max-width:100%;">
                                                 </a>
                                             </div>
                                         </div>
                                         <!--.row-->
-                                    </div>
-                                    <!--.item-->
-
-                                    <div class="carousel-item">
-                                        <div class="row">
-                                            <div class="col-md-3">
-                                                <a href="#">
-                                                    <img class="portfolio-item" src="http://placehold.it/250x250" alt="Image"
-                                                        style="max-width:100%;">
-                                                </a>
-                                            </div>
-                                            <div class="col-md-3">
-                                                <a href="#">
-                                                    <img class="portfolio-item" src="http://placehold.it/250x250" alt="Image"
-                                                        style="max-width:100%;">
-                                                </a>
-                                            </div>
-                                            <div class="col-md-3">
-                                                <a href="#">
-                                                    <img class="portfolio-item" src="http://placehold.it/250x250" alt="Image"
-                                                        style="max-width:100%;">
-                                                </a>
-                                            </div>
-                                            <div class="col-md-3">
-                                                <a href="#">
-                                                    <img class="portfolio-item" src="http://placehold.it/250x250" alt="Image"
-                                                        style="max-width:100%;">
-                                                </a>
-                                            </div>
-                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -130,7 +89,7 @@
         </div>
         <div class="padding"></div>
         <div class="padding"></div>
-        <button id="openModalAvatar" hidden data-toggle="modal" data-target="#modalAvatar"></button>
+        <button hidden id="openModalFirst" data-toggle="modal" data-target="#modalFirst"></button>
     </div>
 
     <div class="modal fade" id="modalMana" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -204,7 +163,32 @@
                 Morbi sit amet dapibus leo. Etiam bibendum at velit vitae fermentum. Fusce cursus quis lacus sit amet dignissim. Mauris ac risus volutpat, pulvinar turpis nec, malesuada erat. Curabitur quis euismod lorem. In at leo sit amet neque tincidunt varius ut vel turpis. Integer in sem in lectus dapibus bibendum vitae ut enim. Vivamus fringilla eleifend lacus ut suscipit.
             </div>
             <div class="modal-footer">
+              
             </div>
           </div>
         </div>
       </div>
+
+      <div class="modal fade" id="modalFirst" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Olá {{ aluno.nome }}!</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                    Bem vindo ao ANTENA CPS! Este é seu primeiro acesso por aqui. Para continuar, você deve ler e aceitar os nossos <a href="#0" data-toggle="modal" data-target="#modalTerms" data-dismiss="modal">Termos de Uso e Política de Privacidade e Segurança</a>.
+                </div>
+                <div class="modal-footer">
+                  <div class="mr-auto">
+                    <input type="checkbox" value="True" id="checkTerms" (onchange)="document.getElementById('submitTerms').disalbed = !this.checked" ><label for="" style="margin-left: 5px"> Li e aceito os termos de uso.</label>
+                  </div>
+                  <div>
+                    <button id="submitTerms" class="btn btn-danger" data-dismiss="modal" (click)="submitTerms" >Continuar</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
