--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -990,3 +990,21 @@
     </div>
   </div>
 </div>
+
+<div class="modal fade" id="CancelarMsg" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true" data-backdrop="static" data-keyboard="false">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content" style="border-radius: 30px">
+      <div class="modal-header modal-top">
+        <h5 class="desafio-title">CANCELAR MENSAGEM</h5>
+        <button type="button" class="btn btn-light btn-x" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true" class="x">X</span></button>
+      </div>
+      <div class="modal-body" style="text-align: center;">
+        <label style="padding: 100px 0px; color: #9E9E9E;">Deseja cancelar o envio da mensagem?</label>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-info btn-send" data-dismiss="modal">OK</button>
+        <button class="btn btn-lg btn-light btn-cancel" data-dismiss="modal" data-toggle="modal" 
+        data-target="#CompDesafio">Voltar</button>
+      </div>
