--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -3,7 +3,7 @@
   <div class="container" style="margin-top: 250px">
     <div class="row">
       <div class="col-md-4">
-        <div class="row" id="icons" style="margin-top: 80px; margin-left: -30px;">
+        <div class="row" id="icons" style="margin-top: 120px; margin-left: -15px; margin-right: -50px;">
           <div class="col-sm-3" id="icon"><a target="__blank"><img [src]="trof" alt=""></a>
             <h6 style="margin-left: 20%; color: #ffff;">Prêmios</h6>
           </div>
@@ -36,7 +36,7 @@
         </div>
       </div>
       <div class="col-md-4">
-        <div class="row" style="margin-top: 110px;">
+        <div class="row" style="margin-top: 150px; margin-left: -50px; margin-right: 0px;">
           <div class="col-sm-3" id="">
             <a target="_blank"><img class="social-icons" [src]="github" alt=""></a>
           </div>
